--- a/app/views/dva/mixed/reg.html
+++ b/app/views/dva/mixed/reg.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" <a href=""action="summarywarningadvisory" method="post"a>
+      <form class="form" <a href=""action="summaryinsetadvisory" method="post"a>
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="event-name">
