--- a/app/views/dva/mixed/summaryinsetadvisory.html
+++ b/app/views/dva/mixed/summaryinsetadvisory.html
@@ -41,10 +41,10 @@
     <h1 class="govuk-heading-l govuk-!-margin-bottom-6">
       17 September 2022
     </h1>
-    <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in England, Scotland or Wales.</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+    <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in Great Britain (England, Scotland or Wales).</p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
       <div class="govuk-inset-text">
-  This vehicle has been tested in Northern Ireland and Great Britain. For test history in Great Britain, you will need the V5C to view the test location.
+  MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
 </div>
     </div>
   </div>
@@ -198,7 +198,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -209,20 +209,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
+                <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                <ul class="govuk-list govuk-!-font-weight-bold">
+                  <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
               </div>
             </div>
         </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
@@ -242,34 +231,23 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,567 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">13 September 2020</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -286,33 +264,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">4901 5248 5547</h2>
-
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Do not drive until repaired (dangerous defects):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are defects?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Major defects may compromise the safety of the vehicle, put other road users at risk, or harm the environment. A vehicle with a major defect will fail the test.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
@@ -330,34 +296,23 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">104,976 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">17 September 2019</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -374,34 +329,23 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">83,345 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">15 September 2018</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
@@ -420,7 +364,7 @@
       </div>
       <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
         <h2 class="govuk-heading-l" style="color:#00703c;">No outstanding safety recalls found</h2>
-        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufactrer's dealership. `please do not contact the DVSA, as we are not able to change the recall status.</p>
+        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufacturer's dealership. Please do not contact the DVSA, as we are not able to change the recall status.</p>
         <p>Was this vehicle recall information useful to you? <a class="govuk-link--no-visited-state" href="#">Tell us your views</a> so we can improve the service. </p>
       </div>
     </div>
