--- a/app/views/dva/mixed/summarywarningadvisory.html
+++ b/app/views/dva/mixed/summarywarningadvisory.html
@@ -202,7 +202,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -213,20 +213,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
+                <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                <ul class="govuk-list govuk-!-font-weight-bold">
+                  <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
               </div>
             </div>
         </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
@@ -246,34 +235,23 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,567 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">13 September 2020</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -290,33 +268,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">4901 5248 5547</h2>
-
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are defects?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Major defects may compromise the safety of the vehicle, put other road users at risk, or harm the environment. A vehicle with a major defect will fail the test.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
@@ -334,34 +300,23 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">104,976 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">17 September 2019</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -378,33 +333,23 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">83,345 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">15 September 2018</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
