--- a/app/views/dva/simple/summary.html
+++ b/app/views/dva/simple/summary.html
@@ -76,7 +76,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -87,20 +87,7 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
+
               </div>
             </div>
         </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
@@ -120,33 +107,20 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">4901 5248 5547</h2>
 
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are defects?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Major defects may compromise the safety of the vehicle, put other road users at risk, or harm the environment. A vehicle with a major defect will fail the test.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -163,34 +137,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">12 September 2021</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -207,34 +168,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">10 September 2020</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -251,33 +199,19 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">4901 5248 5547</h2>
 
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are defects?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Major defects may compromise the safety of the vehicle, put other road users at risk, or harm the environment. A vehicle with a major defect will fail the test.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -294,34 +228,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">14 September 2019</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -338,34 +259,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">10 September 2018</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Advisory and defect information:</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    AAdvisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
